# cpp-chess

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md
include/: constants.hpp  engine.hpp  game.hpp  keys.hpp  movement.hpp  types.hpp
ios/: build_ios.sh
lib/: CMakeLists.txt
lib/gm/: CMakeLists.txt  EnhancedPGNLexer.cpp  EnhancedPGNLexer.g4  EnhancedPGNLexer.h  EnhancedPGNLexer.interp  EnhancedPGNLexer.tokens  EnhancedPGNParser.cpp  EnhancedPGNParser.g4  EnhancedPGNParser.h  EnhancedPGNParser.interp  EnhancedPGNParser.tokens  EnhancedPGNParserBaseListener.cpp  EnhancedPGNParserBaseListener.h  EnhancedPGNParserBaseVisitor.cpp  EnhancedPGNParserBaseVisitor.h  EnhancedPGNParserListener.cpp  EnhancedPGNParserListener.h  EnhancedPGNParserVisitor.cpp  EnhancedPGNParserVisitor.h
lib/inc/: attacks.h  constants.h  engine.h  game.h  gametree.h  keys.h  movement.h  movetree.h  parser.h  types.h
lib/src/: attacks.cpp  constants.c  game.cpp  gametree.cpp  keys.c  movement.cpp  movetree.cpp  parser.cpp  types.cpp
src/: constants.cpp  engine.cpp  game.cpp  keys.cpp  movement.cpp  types.cpp
test/: CMakeLists.txt  chessengine_test.c  chessengine_test.cpp  gametree_test.cpp  main.cpp  ui_test.cpp
ui/: CMakeLists.txt
ui/inc/: renderer.hpp  shader.hpp  texture.hpp  ui.hpp  util.hpp  window.hpp
ui/src/: renderer.cpp  shader.cpp  texture.cpp  window.cpp
